--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.4.7",
     "geist": "^1.3.1",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.475.0",
